test/typeerrors/ex11.golden
Building file ../test/typeerrors/ex11.act
  Compiling ex11.act for release

ERROR: Error when compiling ex11 module: Type error

  |
4 |a = f([8])
  |    ^^^^^^


  |
1 |def f(s):
  |    ^
Type incompatibility between definition of and call of f
f is inferred to have a type of the form _(s: __builtin__.str) -> __builtin__.str

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

